# Pathfinder

./: .env  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy_dashboard.yml  refresh.yml
dashboard/: app.py
data/raw/: October_Sudan_PV - Data.csv  sa_monthly_violence.csv
maps/: primary_roads.html
notebooks/: 01_quickmap.ipynb  quickmap.ipynb  quickmap_local.ipynb
pathfinder/: __init__.py  bayesian.py  db.py  queries.py  risk_tsp.py  settings.py
pathfinder/etl/: enrich_admin2.py  events_to_monthly.py  pull_acled.py  sudan_admin2_monthly.py
pathfinder/utils/: logging.py
scratch/: hdx_sudan_acled_meta.json  load_pv_monthly.py  map_roads.py
scripts/: bootstrap_roads.py  enrich_admin2.py  export_routes.py  fetch_hdx_pv.sh  fetch_hdx_sa_monthly.py  fetch_hdx_sudan_admin2.py  fetch_hdx_sudan_roads.py  optimize_route.py  plot_monthly_totals.py  pull_acled.py  setup_dev_env.sh  update_risk_layers.py  validate_risk.py
sql/: 01_normalize_road_layers.sql  02_staging_clean.sql  03_geo_join.sql  04_last12months_view.sql  monthly_totals.sql
tests/: conftest.py  test_basic.py  test_events_to_monthly.py  test_sudan_admin2_monthly.py
