[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pathfinder"
version = "0.1.0"
description = "Risk-aware mapping tools for humanitarian operations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Unknown", email = ""}]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["pathfinder*"]
