[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathfinder"
version = "0.1.0"
description = "Conflict-navigation tools (Sudan ACLED, roads, dashboards)"
readme = "README.md"
requires-python = ">=3.12"          # optional: bump to your real env
license = {text = "MIT"}
authors = [{name = "J. V. Carmichael", email = "jacquelynvictoriacarmichael@gmail.com"}]

[tool.setuptools.packages.find]
where = ["."]
include = ["pathfinder*"]
